tdr/protocol/gen/tdr_xlsx_reader_sharedstring_l.c
/* Generated by re2c 1.0.1 on Tue Feb 23 17:07:57 2021 */
#line 1 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_sharedstring_l.re"
#include "../tdr_xlsx_reader.h"
#include "tdr_xlsx_reader_sharedstring_l.h"
#include <string.h>
#include <errno.h>

#define YYGETCONDITION()  self->scanner.state
#define YYSETCONDITION(s) self->scanner.state = s
#define STATE(name)  yyc##name
#define BEGIN(state) YYSETCONDITION(STATE(state))
#define YYCURSOR self->scanner.cursor
#define YYLIMIT self->scanner.limit
#define YYMARKER self->scanner.marker
#define YYCTYPE char

tdr_error_code_t tdr_xlsx_reader_load_sharedstring(tdr_xlsx_reader_t *self)
{
	char* str_begin = NULL;

	self->scanner.cursor = self->sharedstring_buff;
	self->scanner.limit = self->sharedstring_buff + self->sharedstring_buff_size;
	self->scanner.marker = self->scanner.cursor;
	self->scanner.state = yycINITIAL;
	self->sharedstring_begin_list = NULL;
	self->sharedstring_end_list = NULL;
	self->sharedstring_list_num = 0;

restart:
	if(YYCURSOR >= YYLIMIT)
	{
		return E_TDR_NOERROR;
	}


#line 37 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_sharedstring_l.c"
{
	YYCTYPE yych;
	switch (YYGETCONDITION()) {
	case yycINITIAL: goto yyc_INITIAL;
	case yycIN_SST_TAG: goto yyc_IN_SST_TAG;
	case yycIN_SST: goto yyc_IN_SST;
	}
/* *********************************** */
yyc_INITIAL:
	yych = *YYCURSOR;
	switch (yych) {
	case '<':	goto yy5;
	default:	goto yy3;
	}
yy3:
	++YYCURSOR;
yy4:
#line 86 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_sharedstring_l.re"
	{goto restart;}
#line 57 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_sharedstring_l.c"
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 's':	goto yy6;
	default:	goto yy4;
	}
yy6:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy8;
	default:	goto yy7;
	}
yy7:
	YYCURSOR = YYMARKER;
	goto yy4;
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy9;
	default:	goto yy7;
	}
yy9:
	++YYCURSOR;
#line 36 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_sharedstring_l.re"
	{BEGIN(IN_SST_TAG); goto restart;}
#line 83 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_sharedstring_l.c"
/* *********************************** */
yyc_IN_SST_TAG:
	yych = *YYCURSOR;
	switch (yych) {
	case 'c':	goto yy15;
	default:	goto yy13;
	}
yy13:
	++YYCURSOR;
yy14:
#line 86 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_sharedstring_l.re"
	{goto restart;}
#line 96 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_sharedstring_l.c"
yy15:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'o':	goto yy16;
	default:	goto yy14;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'u':	goto yy18;
	default:	goto yy17;
	}
yy17:
	YYCURSOR = YYMARKER;
	goto yy14;
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy19;
	default:	goto yy17;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy20;
	default:	goto yy17;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy21;
	default:	goto yy17;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy22;
	default:	goto yy17;
	}
yy22:
	++YYCURSOR;
#line 38 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_sharedstring_l.re"
	{
	const char* number_begin = YYCURSOR;
	uint32_t num;
	while(*YYCURSOR != '"')
		++YYCURSOR;
	*YYCURSOR = 0;
	errno = 0;
	num = strtoul(number_begin, NULL, 10);
	if(errno != 0)
	{
		goto ERROR_RET;
	}
	self->sharedstring_begin_list = malloc(sizeof(char*) * num);
	if(self->sharedstring_begin_list == NULL)
	{
		goto ERROR_RET;
	}

	self->sharedstring_end_list = malloc(sizeof(char*) * num);
	if(self->sharedstring_end_list == NULL)
	{
		goto ERROR_RET;
	}

	while(*YYCURSOR != '>')
		++YYCURSOR;
	++YYCURSOR;
	YYMARKER = YYCURSOR;
	BEGIN(IN_SST);
	goto restart;
}
#line 170 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_sharedstring_l.c"
/* *********************************** */
yyc_IN_SST:
	yych = *YYCURSOR;
	switch (yych) {
	case '<':	goto yy28;
	default:	goto yy26;
	}
yy26:
	++YYCURSOR;
yy27:
#line 86 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_sharedstring_l.re"
	{goto restart;}
#line 183 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_sharedstring_l.c"
yy28:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '/':	goto yy29;
	case 't':	goto yy31;
	default:	goto yy27;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy32;
	case 't':	goto yy33;
	default:	goto yy30;
	}
yy30:
	YYCURSOR = YYMARKER;
	goto yy27;
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy34;
	default:	goto yy30;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy36;
	default:	goto yy30;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy37;
	default:	goto yy30;
	}
yy34:
	++YYCURSOR;
#line 70 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_sharedstring_l.re"
	{
	str_begin = YYCURSOR;
	goto restart;
}
#line 226 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_sharedstring_l.c"
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy39;
	default:	goto yy30;
	}
yy37:
	++YYCURSOR;
#line 75 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_sharedstring_l.re"
	{
	self->sharedstring_begin_list[self->sharedstring_list_num] = str_begin;
	self->sharedstring_end_list[self->sharedstring_list_num] = YYCURSOR - 4;
	++self->sharedstring_list_num;
	goto restart;
}
#line 242 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_sharedstring_l.c"
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy40;
	default:	goto yy30;
	}
yy40:
	++YYCURSOR;
#line 82 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_sharedstring_l.re"
	{
	BEGIN(INITIAL);
	goto restart;
}
#line 256 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_sharedstring_l.c"
}
#line 87 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_sharedstring_l.re"

ERROR_RET:
	if(self->sharedstring_begin_list != NULL)
	{
		free(self->sharedstring_begin_list);
	}

	if(self->sharedstring_end_list != NULL)
	{
		free(self->sharedstring_end_list);
	}
	return E_TDR_ERROR;
}


